--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Pendaftaran Peserta</title>
+  <title>Form Pendaftaran Acara</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
@@ -89,8 +89,8 @@
       </div>
 
       <div class="col-12">
-        <label class="form-label">NIP</label>
-        <input type="text" name="nip" id="nipField" class="form-control">
+        <label for="nip">NIP</label>
+		<input id="nip" name="nip" type="number" inputmode="numeric" pattern="[0-9]*" class="form-control">
       </div>
 
       <div class="col-12 col-md-6">
@@ -104,8 +104,8 @@
       </div>
 
       <div class="col-12">
-        <label class="form-label">Nomor HP/WA</label>
-        <input type="text" name="hp" class="form-control" required>
+        <label for="nohp">No HP</label>
+		<input id="nohp" name="nohp" type="tel" inputmode="numeric" pattern="[0-9]*" class="form-control">
       </div>
 
       <div class="col-12">
@@ -285,6 +285,12 @@
         nipField.setAttribute("required","required");
       }
     });
+	
+	document.querySelectorAll('#nip, #nohp').forEach(el => {
+		el.addEventListener('input', function() {
+			this.value = this.value.replace(/\D/g, ''); // hapus semua non-digit
+		});
+	});
 
     // initial
     loadOptionsAndCheckDevice();
