--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="card">
-    <h3 class="mb-4 text-center">Form Pendaftaran Acara</h3>
+    <h3 class="mb-4 text-center">Form Pendaftaran Peserta</h3>
 
     <div id="warningBox"></div>
     <div id="deviceBox"></div>
